# barryosull.com-python

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.override.example.yml  docker-compose.yml  nginx.conf  project-spec.md  prompt.md  pyproject.toml
backend/application/: command_bus.py
backend/ports/: room_repository_port.py
backend/scripts/: copy_game.py  playtest.py
frontend/: README.md  colours.md  index.html  package-lock.json  package.json  test-multi-player.html  vite.config.js
frontend/assets/: styles.css
frontend/src/: App.jsx  index.css
src/: config.py
src/application/: command_bus.py
src/database/: README.md  connection.py  example_usage.py  models.py
src/my_app/: __init__.py  __main__.py  cli.py  web.py
src/ports/: code_repository_port.py  repository_port.py  room_repository_port.py
src/scripts/: copy_game.py  playtest.py  trigger_notification.py
tests/: __init__.py
tests/adapters/: test_code_factory.py  test_file_system_code_repository.py  test_file_system_room_repository.py  test_room_manager.py
tests/application/: test_cast_vote.py  test_discard_policy.py  test_enact_policy.py  test_hitler_elected.py  test_nominate_chancellor.py  test_reorder_players.py  test_start_game.py  test_use_executive_action.py  test_veto_agenda.py
tests/domain/: test_game_room.py  test_game_state.py  test_government_formation_service.py  test_player.py  test_policy.py  test_policy_deck.py  test_policy_enactment_service.py  test_role.py  test_role_assignment_service.py  test_vote.py  (+1 more)
(+107 files in other folders)
