[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-app"
version = "0.1.0"
description = "A Python app with both web and CLI interfaces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
]

[project.scripts]
my-app = "my_app.cli:main"
my-app-web = "my_app.web:run"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",  # For testing FastAPI
]